Fix instant like animation, fix biography overflow on profile page

--- a/CookBookSocial/frontend/src/pages/ProfilePage/ProfilePage.css
+++ b/CookBookSocial/frontend/src/pages/ProfilePage/ProfilePage.css
@@ -12,3 +12,7 @@
 .profilePosts{
     position:relative
 }
+
+.biography {
+    max-width: 300px;
+}
